--- a/index.html
+++ b/index.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- 
 
-Author: MyLead.global
-The landing page is available to everyone, absolutely free. We will appreciate it if you do not share it with anyone and do not use that with Content Lockers from other companies.
-Earning money on this landing page with Content Lockers from MyLead allows us to create another landing page and give it away for free.
-Thank you!
-
- -->
 
 <head>
     <meta charset="UTF-8">
@@ -113,7 +106,7 @@ Thank you!
                     <h3 class="mid-text">Human Verification</h3>
                     <h3 class="mid-text small">Please use the CAPTCHA below and follow the offer from the list to start the download.</h3>
                     <div class="locker" id="locker">
-						<!-- Below you paste your code to Content Locker from MyLead.global -->
+						<!-- Below -->
 						<div id="cpa-locker-66a35a70-9b9d-11ea-917c-4da51a383410"></div><script type="text/javascript" id="cpljs-66a35a70-9b9d-11ea-917c-4da51a383410" src="//captchalocker.pl/iframeLoader/66a35a70-9b9d-11ea-917c-4da51a383410?"></script>
                     </div>  
                 </div>
